# s7_agentic_architecture

./: .gitignore  README.md  READMEmd
S7code/: agent7.py  artifacts.py  decision.py  gateway.py  mcp_server.py  memory.py  perception.py  pyproject.toml  requirements.txt  results.md  schemas.py  test_mcp_server.py  vector_index.py
S7code/helper/: download_papers.py  indexing_results.md  queries.md  rename_papers.py
llm_gatewayV7/: client.py  db.py  main.py  providers.py  pyproject.toml  schemas.py
