[project]
name = "llm-gateway-v7"
version = "0.1.0"
description = "LLM Gateway V7 — V3 plus a /v1/embed endpoint."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "pydantic>=2.6",
    "jsonschema>=4.21",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
markers = [
    "local: requires a running local Ollama daemon",
    "network: requires internet access (Gemini API)",
]
